--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
       <footer>
       <p>Connect with me on LinkedIn, GitHub, or via email!</p>
 <!-- creating links to Linked-in, GitHub, and my email using images-->
-<a href="https://www.linkedin.com/in/whitney-green-09753b89/"><img src="images/icons/linkedin.jpg" alt="LinkedIn" style="width:42px;height:42px;"></a>
+<a href="https://www.linkedin.com/in/whitney-green-09753b89/"><img src="images/linkedin.png" alt="LinkedIn" style="width:42px;height:42px;"></a>
 
-<a href="https://github.com/whitneygreen"><img src="images/icons/github.jpg" alt="GitHub" style="width:42px;height:42px;"></a>
+<a href="https://github.com/whitneygreen"><img src="images/icons8-github-100.png" alt="GitHub" style="width:42px;height:42px;"></a>
 
 
-<a href=mailto:whitneylowery94@gmail.com"><img src="images/icons/email.jpg" alt="Email" style="width:42px;height:42px;"></a>
+<a href=mailto:whitneylowery94@gmail.com"><img src="images/icons8-email-100.png" alt="Email" style="width:42px;height:42px;"></a>
 
    </footer>   
   </div>
